--- a/src/components/Navbar/navbar.css
+++ b/src/components/Navbar/navbar.css
@@ -1,4 +1,8 @@
 .nav{
-    height: 60px;
-    align-items: center;
+    height: 100px;
+    align-items: center;    
+}
+
+.navMain {
+    width: 100%;
 }
