--- a/src/components/Search/search.css
+++ b/src/components/Search/search.css
@@ -1,4 +1,11 @@
 .description {
   height: auto;
 }
+.zoom-in-on-hover {
+  transition: transform 0.3s ease; 
+}    
+
+.zoom-in-on-hover:hover {
+  transform: scale(1.15);
+}
 
