--- a/src/components/Results/results.css
+++ b/src/components/Results/results.css
@@ -1,6 +1,5 @@
 .results {
-    width: 90%;
-    margin-top: -50px;
+    width: 100%;
     align-items: center;
     justify-content: center;
 }
@@ -11,15 +10,38 @@
     justify-content: space-evenly;
 }
 .details {
-    width: 100px;
-    height: 100px;
+    width: 50px;
+    height: 50px;
     align-items: center;
     justify-content: center;
-    padding-top: 30px;
-    font-size: 30px;
+    padding-top: 12px;
+    font-size: 18px;
 }
 .age {
     display: flex;
     align-items: center;
     justify-content: center;
+}
+.head {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+}
+.cancel {
+    height: 20px;
+}
+.icon {
+    display: flex;
+    height: 30px;
+    width: 30px;
+    align-items: center;
+    justify-content: center;
+}
+.zoom-in-on-hover {
+    transition: transform 0.3s ease; 
+}    
+  
+.zoom-in-on-hover:hover {
+    transform: scale(1.15);
 }
